# maxxi_robot_model

./: CMakeLists.txt  README.md  package.xml
include/robot_model/: generalPurpose.cpp  generalPurpose.h  motionModels.cpp  motionModels.h
src/: unicycle_2_differential.cpp  unicycle_sim_node.cpp
